# Rememb

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  MCP_TOOLS.md  README.md  RELEASE.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/agents/: rememb-maintainer.agent.md
.github/instructions/: rememb-mcp-schema-output.instructions.md  rememb-persistence-mcp.instructions.md  temp.instructions.md  temp2.instructions.md
.github/prompts/: review-rememb-storage-contracts.prompt.md  review-rememb-tui-cli.prompt.md
.github/workflows/: ci.yml  release.yml
rules/: claude.md  continue.md  cursor.md  vscode.md  windsurf.md
src/memdir/: __init__.py  cli.py  store.py
src/rememb/: __init__.py  cli.py  config.py  exceptions.py  helpers.py  mcp_server.py  store.py  tui.py  utils.py  web.py
src/rememb/skills/: __init__.py
src/rememb/skills/analyzing-financial-statements/: SKILL.md
src/rememb/skills/architecture-diagrams/: SKILL.md
src/rememb/skills/async-python-patterns/: SKILL.md
src/rememb/skills/brainstorming/: SKILL.md
src/rememb/skills/canvas-design/: SKILL.md
src/rememb/skills/chrome-devtools/: SKILL.md
src/rememb/skills/code-commit/: SKILL.md
src/rememb/skills/copywriter/: SKILL.md
src/rememb/skills/debugging-strategies/: SKILL.md
src/rememb/skills/doc-coauthoring/: SKILL.md
src/rememb/skills/docx/: SKILL.md
src/rememb/skills/executing-plans/: SKILL.md
src/rememb/skills/experience-record/: SKILL.md
src/rememb/skills/git-advanced-workflows/: SKILL.md
src/rememb/skills/mcp-builder/: SKILL.md
src/rememb/skills/memory-systems/: SKILL.md
src/rememb/skills/obsidian-markdown/: SKILL.md
src/rememb/skills/planning-with-files/: SKILL.md
src/rememb/skills/playwright/: SKILL.md
src/rememb/skills/playwright-skill/: SKILL.md
src/rememb/skills/req-create/: SKILL.md
src/rememb/skills/scientific-critical-thinking/: SKILL.md
src/rememb/skills/senior-architect/: SKILL.md
src/rememb/skills/skill-creator/: SKILL.md
src/rememb/skills/skill-lookup/: SKILL.md
src/rememb/skills/skills-discovery/: SKILL.md
src/rememb/skills/subagent-driven-development/: SKILL.md
src/rememb/skills/systematic-debugging/: SKILL.md
src/rememb/skills/test-create/: SKILL.md
src/rememb/skills/theme-factory/: SKILL.md
src/rememb/skills/ui-designer/: SKILL.md
src/rememb/skills/workspace-setup/: SKILL.md
src/rememb/skills/writing-plans/: SKILL.md
src/rememb/static/: app.js  index.html  style.css
src/rememb/storage/: __init__.py  base.py  json_backend.py  locking.py  sqlite_backend.py
src/rememb/store/: __init__.py  _common.py  agent_tools.py  crud.py  handoffs.py  review.py  workstreams.py
src/rememb/web/: __init__.py  app.py  deps.py  schemas.py
src/rememb/web/routes/: __init__.py  entries.py  review.py  system.py  workstreams.py
src/rememb_skills/: __init__.py
src/rememb_skills/agent-browser/: SKILL.md
src/rememb_skills/applying-brand-guidelines/: SKILL.md
src/rememb_skills/architecture-patterns/: SKILL.md
src/rememb_skills/brainstorming/: SKILL.md  visual-companion.md
src/rememb_skills/browser-use/: SKILL.md
src/rememb_skills/code-reviewer/: SKILL.md
src/rememb_skills/context-optimization/: SKILL.md
src/rememb_skills/creating-financial-models/: SKILL.md
src/rememb_skills/data-analysis/: SKILL.md
src/rememb_skills/deep-research/: SKILL.md
src/rememb_skills/design-create/: SKILL.md
src/rememb_skills/executing-plans/: SKILL.md
src/rememb_skills/file-organizer/: SKILL.md
src/rememb_skills/frontend-design/: SKILL.md
src/rememb_skills/markitdown/: SKILL.md
src/rememb_skills/modern-javascript-patterns/: SKILL.md
src/rememb_skills/pdf/: SKILL.md
src/rememb_skills/planning-with-files/templates/: task_plan.md
src/rememb_skills/ppt-creator/: SKILL.md
src/rememb_skills/pptx/: SKILL.md
src/rememb_skills/rag-implementation/: SKILL.md
src/rememb_skills/react-native-expert/: SKILL.md
src/rememb_skills/rememb-mcp/: SKILL.md
src/rememb_skills/resume-manager/: SKILL.md
src/rememb_skills/senior-frontend/: SKILL.md
src/rememb_skills/skill-writer/: SKILL.md
src/rememb_skills/sql-optimization-patterns/: SKILL.md
src/rememb_skills/ui-styling/: SKILL.md
src/rememb_skills/webapp-testing/: SKILL.md
src/rememb_skills/writing-plans/: SKILL.md
src/rememb_skills/xlsx/: SKILL.md
tests/: test_agent_tools.py  test_cli.py  test_docker.py  test_mcp_server.py  test_mcp_sse.py  test_storage.py  test_store.py  test_web.py  test_web_system.py
