[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rememb"
version = "0.3.7"
description = "Persistent memory standard for AI agents — local, portable, zero config"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "agents", "memory", "llm", "mcp", "windsurf", "cursor", "claude", "copilot", "continue", "vscode", "persistent-memory", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
rememb = "rememb.cli:app"

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0.0", "numpy>=1.24.0"]
pdf = ["pypdf>=4.0.0"]
mcp = ["mcp>=1.0.0"]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/LuizEduPP/rememb"
Repository = "https://github.com/LuizEduPP/rememb"
Issues = "https://github.com/LuizEduPP/rememb/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.gif"]

[tool.setuptools]
include-package-data = true
