[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rememb"
version = "0.4.11"
description = "Persistent memory standard for AI agents — local, portable, zero config"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "memory", "llm", "mcp", "windsurf", "cursor", "claude", "copilot", "continue", "vscode", "persistent-memory", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "pypdf>=4.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
rememb = "rememb.cli:app"

[project.optional-dependencies]
dev = ["build", "twine", "pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/LuizEduPP/rememb"
Documentation = "https://github.com/LuizEduPP/rememb/blob/main/README.md"
Repository = "https://github.com/LuizEduPP/rememb"
Issues = "https://github.com/LuizEduPP/rememb/issues"
Changelog = "https://github.com/LuizEduPP/rememb/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rememb*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.gif", "*.html", "*.png", "*.css", "*.js"]
rememb_skills = ["**/*"]

[tool.setuptools]
include-package-data = true
